# django-twitterclone

./: README.md  index.html  main.css  pyproject.toml
twitterclone/notifications/: models.py  urls.py  views.py
twitterclone/templates/: add_user.html  index.html  login.html  notifications.html
twitterclone/tweet/: admin.py  forms.py  models.py  urls.py  views.py
twitterclone/twitter_clone/: settings.py
