[tool.poetry]
name = "django-twitterclone"
version = "0.1.0"
description = ""
authors = ["Dunya Moss"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]
django-auto-graphql = "^0.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
